--- a/inkubator-presentation/index.html
+++ b/inkubator-presentation/index.html
@@ -159,7 +159,7 @@
 						<h2>Prostota </h2>
 						<div class="fragment">
 							<blockquote>
-								&ldquo; Google to internetowe Ferrari. Funckjonuje jak samochód wyścigowy, bo wiadomo, że nikt nie chce szukać choćby prz sekundę dłużej. &rdquo;
+								&ldquo; Google to internetowe Ferrari. Funckjonuje jak samochód wyścigowy, bo wiadomo, że nikt nie chce szukać choćby przez sekundę dłużej. &rdquo;
 							</blockquote>
 							<p style="float: right;">
 								Gerry McGovern
@@ -184,13 +184,9 @@
 						<ul>
 							<li class="fragment">Aplikacja internetowa</li>
 							<li class="fragment">Aplikacja mobilna</li>
-							<li class="fragment">Wykorzystanie nowoczesnych technologii</li>
+							<li class="fragment">Wykorzystanie najnowszysch technologii</li>
 							<li class="fragment">Nowoczesny design</li>
 						</ul>
-					</section>
-
-					<section>
-						<img src="images/schemat.png">
 					</section>
 
 				</section>
