--- a/inkubator-presentation/index.html
+++ b/inkubator-presentation/index.html
@@ -184,7 +184,7 @@
 						<ul>
 							<li class="fragment">Aplikacja internetowa</li>
 							<li class="fragment">Aplikacja mobilna</li>
-							<li class="fragment">Wykorzystanie najnowszysch technologii</li>
+							<li class="fragment">Wykorzystanie najnowszych technologii</li>
 							<li class="fragment">Nowoczesny design</li>
 						</ul>
 					</section>
