--- a/inkubator-presentation/index.html
+++ b/inkubator-presentation/index.html
@@ -49,28 +49,26 @@
 
 				<section>
 					<section>
-						<h2>Gdzie wyjść na piwo?</h2>					
+						<h2>Gdzie wyjść na piwo?</h2>
 					</section>
 
 					<section>
-						<h3>Lokalizacja</h3>					
+						<h3>Lokalizacja</h3>
 					</section>
 
 					<section>
-						<h3>Preferencje</h3>
+						<h3>Oferta lokalu</h3>
 						<ul>
-							<li class="fragment">Piwo</li>
-							<li class="fragment">Inne napoje</li>
-							<li class="fragment">Muzyka</li>
-							<li class="fragment">Atrakcje</li>
-						</ul>				
+							<li class="fragment">Rodzaje piw</li>
+							<li class="fragment">Muzyka (odpowiedni klimat)</li>
+							<li class="fragment">Atrakcje (bilard, rzutki...)</li>
+						</ul>
 					</section>
 
 					<section>
-						<h3>Opinie</h3>					
+						<h3>Opinie</h3>
 					</section>
 				</section>
-
 
 				<section>
 					<section>
@@ -79,16 +77,6 @@
 
 					<section>
 						<h2>dlaStudenta.pl</h2>
-						<ul>
-							<li class="fragment">Portal od wszystkiego</li>
-							<li class="fragment">Skomplikowane</li>
-							<li class="fragment">Brak niektórych funkcji</li>
-							<li class="fragment">Nieaktualizowane informacje</li>
-							<li class="fragment">Brak aplikacji mobilnej</li>
-						</ul>
-					</section>
-
-					<section>
 						<img src="images/dlastudenta1.png">
 					</section>
 
@@ -97,28 +85,27 @@
 					</section>
 
 					<section>
+						<h2>dlaStudenta.pl</h2>
+						<ul>
+							<li class="fragment">Portal od wszystkiego</li>
+							<li class="fragment">Skomplikowany</li>
+							<li class="fragment">Niedziałające funkcjonalności</li>
+							<li class="fragment">Nieaktualizowane informacje</li>
+							<li class="fragment">Niedostosowany do urządzeń mobilnych</li>
+						</ul>
+					</section>
+
+					<section>
 						<h2>zomato</h2>
 						<ul>
 							<li class="fragment">Tylko restauracje</li>
-							<li class="fragment">Brak wiekszości opcji</li>
 						</ul>
 					</section>
 
 					<section>
 						<h2>klubowa.pl</h2>
 						<ul>
-							<li class="fragment">Brak wyszukiwarki</li>
 							<li class="fragment">Głównie imprezy klubowe</li>
-							<li class="fragment">Brak aplikacji mobilnej</li>
-						</ul>
-					</section>
-
-					<section>
-						<h2>Aplikacje mobilne</h2>
-						<ul>
-							<li class="fragment">Find Pubs & Bars</li>
-							<li class="fragment">Pub Buddy - Licznik piwa</li>
-							<li class="fragment">Pubs Galore</li>
 						</ul>
 					</section>
 				</section>
@@ -126,10 +113,11 @@
 				<section>
 					<section>
 						<p style="font-size: 5em;">huBEERt</p>
-						<h3  class="fragment">Wyszukiwarka pubów i barów </p>
+						<h3  class="fragment">Wyszukiwarka pubów i barów</p>
 					</section>
 
-					<section>						
+
+					<section>
 						<h2>Klient </h2>
 						<ul>
 							<li class="fragment">Wyszukiwanie według preferencji</li>
@@ -139,7 +127,7 @@
 						</ul>
 					</section>
 
-					<section>						
+					<section>
 						<h2>Właściciel baru</h2>
 						<ul>
 							<li class="fragment">Dodawanie i aktualizacja informacji o lokalu</li>
@@ -155,7 +143,7 @@
 						<h2>Cechy </h2>
 					</section>
 
-					<section>						
+					<section>
 						<h2>Prostota </h2>
 						<div class="fragment">
 							<blockquote>
@@ -167,7 +155,7 @@
 						</div>
 					</section>
 
-					<section>						
+					<section>
 						<h2>Intuicyjność</h2>
 						<div class="fragment">
 							<blockquote>
@@ -179,7 +167,7 @@
 						</div>
 					</section>
 
-					<section>						
+					<section>
 						<h2>Nowoczesność</h2>
 						<ul>
 							<li class="fragment">Aplikacja internetowa</li>
@@ -196,7 +184,7 @@
 					<h3>Wyszukiwarka pubów i barów </p>
 				</section>
 
-				
+
 
 			</div>
 
