--- a/inkubator-presentation/index.html
+++ b/inkubator-presentation/index.html
@@ -121,7 +121,7 @@
 						<h2>Klient </h2>
 						<ul>
 							<li class="fragment">Wyszukiwanie według preferencji</li>
-							<li class="fragment">Najlbiższe bary w okolicy</li>
+							<li class="fragment">Najbliższe bary w okolicy</li>
 							<li class="fragment">Przeglądanie i wystawianie opinii</li>
 							<li class="fragment">Wyszukiwanie i przeglądanie eventów</li>
 						</ul>
